Data: update titles

--- a/data/posts/4000/3081.md
+++ b/data/posts/4000/3081.md
@@ -14,7 +14,7 @@
 1) https://youtu.be/mTRaVSiYIN8?t=435
 
 ### title.ru
-
+Война в Украине закончится через два месяца
 
 ### statement.en
 I predict the war will end in two months.
@@ -26,7 +26,7 @@ The war in Ukraine.
 1) https://youtu.be/mTRaVSiYIN8?t=435
 
 ### title.en
-
+The war in Ukraine will end in two months
 
 ### original-language
 ru
