--- a/data/posts/4000/3083.md
+++ b/data/posts/4000/3083.md
@@ -14,7 +14,7 @@
 1) Фарида Курбангалеева https://youtu.be/QF-WNA0czdE?t=2640
 
 ### title.ru
-
+Когда-то мы увидим встречу Путина и Зеленского
 
 ### statement.en
 I think that this meeting will take place someday. At some point, we will see Putin and Zelensky in the same room.
@@ -26,7 +26,7 @@ In response to the question: "How expedient and realistic do you see a meeting b
 1) Farida Kurbangalieva  https://youtu.be/QF-WNA0czdE?t=2640
 
 ### title.en
-
+We will see a meeting between Putin and Zelensky someday
 
 ### original-language
 ru
