--- a/data/posts/4000/3084.md
+++ b/data/posts/4000/3084.md
@@ -5,7 +5,7 @@
 123 <!-- ilia-novikov, Илья Новиков -->
 
 ### statement.ru
-Пока Путин живой, эта война кончиться не может. Неважно что говорит Трамп, ненважно что подпишет Зеленский. Путину нужна Украина целиком. И если он получит её целиком, конечно он на ней не остановится.
+Пока Путин живой, эта война кончиться не может. Неважно что говорит Трамп, неважно что подпишет Зеленский. Путину нужна Украина целиком. И если он получит её целиком, конечно он на ней не остановится.
 
 ### context.ru
 
@@ -14,7 +14,7 @@
 1) Популярная политика https://youtu.be/BkyifrZ4Cx8?t=160
 
 ### title.ru
-
+Пока Путин жив - война в Украине не закончится
 
 ### statement.en
 As long as Putin is alive, this war cannot end. It doesn't matter what Trump says, it doesn't matter what Zelensky signs. Putin needs the whole of Ukraine. And if he gets all of it, of course he won't stop there.
@@ -26,7 +26,7 @@ As long as Putin is alive, this war cannot end. It doesn't matter what Trump say
 1) Popular Politics https://youtu.be/BkyifrZ4Cx8?t=160
 
 ### title.en
-
+As long as Putin is alive, the war in Ukraine will not end
 
 ### original-language
 ru
