--- a/data/posts/4000/3086.md
+++ b/data/posts/4000/3086.md
@@ -14,7 +14,7 @@
 1) Metametrica https://youtu.be/XuMi_jPBPbM?t=995
 
 ### title.ru
-
+Нетаньяху в случае очередной отставки неизбежно ждёт следствие
 
 ### statement.en
 Against this backdrop, only a reckless individual like Netanyahu could escalate things to direct strikes on Iran. He has no other way out. He has headed the government for many years with several interruptions, and during that time, he managed to cause so much trouble that in the event of another dismissal, he will inevitably face an investigation, and then most likely a trial.
@@ -26,7 +26,7 @@ Against this backdrop, only a reckless individual like Netanyahu could escalate 
 1) Metametrica https://youtu.be/XuMi_jPBPbM?t=995
 
 ### title.en
-
+Netanyahu will inevitably face investigation in the event of another resignation
 
 ### original-language
 ru
