--- a/data/posts/4000/3087.md
+++ b/data/posts/4000/3087.md
@@ -15,7 +15,7 @@
 1) Нино Росебашвили https://youtu.be/bdhaY9l1dq4?t=3845
 
 ### title.ru
-
+Арсена Маркаряна посадят
 
 ### statement.en
 Poor Markaryan. What a fool. Of course. There's not a single reason not to jail him.
@@ -27,7 +27,7 @@ In response to the question: "Do you think he'll be jailed?" (Arsen Markaryan)
 1) Nino Rosebashvili https://youtu.be/bdhaY9l1dq4?t=3845
 
 ### title.en
-
+Arsen Markaryan will be jailed
 
 ### original-language
 ru
