--- a/data/posts/4000/3089.md
+++ b/data/posts/4000/3089.md
@@ -14,7 +14,7 @@
 1) Живой Гвоздь https://youtu.be/qm772rJjGws?t=1464
 
 ### title.ru
-
+Не будет встречи Путина и Зеленского в обозримом будущем
 
 ### statement.en
 In the foreseeable future, it will not happen, from my point of view. I don't know, I could be wrong. 
@@ -26,7 +26,7 @@ In response to the question: "Maxim, when will the meeting between Putin and Zel
 1) Live Nail https://youtu.be/qm772rJjGws?t=1464
 
 ### title.en
-
+There will be no meeting between Putin and Zelensky in the foreseeable future
 
 ### original-language
 ru
