--- a/data/posts/4000/3090.md
+++ b/data/posts/4000/3090.md
@@ -14,7 +14,7 @@
 1) Популярная политика https://youtu.be/Gc8SOJWNoas?t=3010
 
 ### title.ru
-
+Сергея Маркова не исключат из списка иноагентов быстро
 
 ### statement.en
 Will he be removed from this list of foreign agents or not? My prediction is that it definitely won't happen quickly—not in a month, not in a year. 
@@ -26,7 +26,7 @@ Speaking about Sergei Markov.
 1) Popular Politics https://youtu.be/Gc8SOJWNoas?t=3010
 
 ### title.en
-
+Sergey Markov will not be quickly removed from the foreign agents list
 
 ### original-language
 ru
