--- a/data/posts/4000/3091.md
+++ b/data/posts/4000/3091.md
@@ -14,7 +14,7 @@
 1) Radio VERA TV https://youtu.be/GKvgpgG45ic?t=2145
 
 ### title.ru
-
+Если состоится встреча Зеленского и Путина - это будет значить что война подходит к концу
 
 ### statement.en
 How likely is a meeting between Vladimir Putin and Zelensky?... If a meeting takes place, it will mean that the war is coming to an end.
@@ -26,7 +26,7 @@ How likely is a meeting between Vladimir Putin and Zelensky?... If a meeting tak
 1) Radio VERA TV https://youtu.be/GKvgpgG45ic?t=2145
 
 ### title.en
-
+If a meeting between Zelensky and Putin takes place, it will mean that the war is coming to an end
 
 ### original-language
 ru
