--- a/data/posts/4000/3093.md
+++ b/data/posts/4000/3093.md
@@ -14,7 +14,7 @@
 1) https://youtu.be/i1j6ly3x3_g?t=327
 
 ### title.ru
-
+Новороссийский порт в Сентябре 2025 станет очень важной целью для Украины
 
 ### statement.en
 Let's not forget about the Novorossiysk port, which I think will become a very important target for Ukraine in September. Let's lock in this prediction of mine. In September, the Novorossiysk port will be in the news precisely in this context.
@@ -26,7 +26,7 @@ Let's not forget about the Novorossiysk port, which I think will become a very i
 1) https://youtu.be/i1j6ly3x3_g?t=327
 
 ### title.en
-
+The Novorossiysk port will become a very important target for Ukraine in September 2025
 
 ### original-language
 ru
