--- a/data/posts/4000/3095.md
+++ b/data/posts/4000/3095.md
@@ -18,7 +18,7 @@
 1) https://x.com/elonmusk/status/1959723029531181380
 
 ### title.ru
-
+Будет всеобщий высокий доход (а не просто базовый)
 
 ### statement.en
 There will be universal high income (not merely basic income). 
@@ -34,7 +34,7 @@ Sustainable abundance.
 1) https://x.com/elonmusk/status/1959723029531181380
 
 ### title.en
-
+There will be universal high income (not merely basic income)
 
 ### original-language
 en
