--- a/data/posts/4000/3096.md
+++ b/data/posts/4000/3096.md
@@ -14,7 +14,7 @@
 1) Conflict Intelligence Team https://youtu.be/cjaUkF43Qxw?t=2665
 
 ### title.ru
-
+Через очередные 2-3 недели я никаких крупных изменений не жду со стороны администрации Трампа
 
 ### statement.en
 Of course, I don't expect any major changes from the Trump administration in the next 2-3 weeks. We will again see comments from Putin, Trump... I expect that Trump will simply back out; this is my personal opinion, assessment, and forecast.
@@ -26,7 +26,7 @@ Of course, I don't expect any major changes from the Trump administration in the
 1) Conflict Intelligence Team https://youtu.be/cjaUkF43Qxw?t=2665
 
 ### title.en
-
+I don't expect any major changes from the Trump administration in the next 2-3 weeks
 
 ### original-language
 ru
