--- a/data/posts/4000/3098.md
+++ b/data/posts/4000/3098.md
@@ -14,7 +14,7 @@
 1) Yulia Latynina https://youtu.be/GxTzBultfPY?t=435
 
 ### title.ru
-
+При Путине закон об иноагентах не будет ни отменён, ни смягчён
 
 ### statement.en
 Under Putin, this law will be neither abolished nor softened, from my point of view.
@@ -26,7 +26,7 @@ In response to the question: "What are the chances that this law will be repeale
 1) Yulia Latynina https://youtu.be/GxTzBultfPY?t=435
 
 ### title.en
-
+Under Putin, the foreign agents law will neither be repealed nor softened
 
 ### original-language
 ru
