--- a/data/posts/4000/3100.md
+++ b/data/posts/4000/3100.md
@@ -14,7 +14,7 @@
 1) Conflict Intelligence Team https://youtu.be/E_fn43Gqleo?t=590
 
 ### title.ru
-
+Камышеваха в ближайшее время падёт | Война в Украине
 
 ### statement.en
 It was quite obvious that Kamyshevakha would fall in the near future... Sooner or later, it will definitely end up in the Russian rear. That's pretty obvious.
@@ -26,7 +26,7 @@ It was quite obvious that Kamyshevakha would fall in the near future... Sooner o
 1) Conflict Intelligence Team https://youtu.be/E_fn43Gqleo?t=590
 
 ### title.en
-
+Kamyshevakha will fall soon | War in Ukraine
 
 ### original-language
 ru
