--- a/data/posts/4000/3101.md
+++ b/data/posts/4000/3101.md
@@ -14,13 +14,13 @@
 1) Conflict Intelligence Team https://youtu.be/E_fn43Gqleo?t=2280
 
 ### title.ru
-
+Следующей весной захватят территорий меньше, чем следующим летом | Война в Украине
 
 ### statement.en
 While I don't have the gift of prophecy, I can tell you that if the war isn't frozen, they will capture less territory next spring than they will next summer. This is a recurring trend. They always capture more territory in the summer than they do in the spring.
 
 ### context.en
-
+The next spring, fewer territories will be captured than the next summer | War in Ukraine
 
 ### notes.en
 1) Conflict Intelligence Team https://youtu.be/E_fn43Gqleo?t=2280
