--- a/data/posts/4000/3102.md
+++ b/data/posts/4000/3102.md
@@ -14,7 +14,7 @@
 1) Максим Шевченко https://youtu.be/8QLKOXclRzI?t=3400
 
 ### title.ru
-
+Франция признает Палестину
 
 ### statement.en
 It will definitely. France is bound to recognize it, of course it will, 100%. 
@@ -26,7 +26,7 @@ In response to the question: "Will Europe recognize Palestine in September?"
 1) Maksim Shevchenko https://youtu.be/8QLKOXclRzI?t=3400
 
 ### title.en
-
+France will recognize Palestine
 
 ### original-language
 ru
