--- a/data/posts/4000/3103.md
+++ b/data/posts/4000/3103.md
@@ -14,7 +14,7 @@
 1) Бакалейко https://youtu.be/A6tqK4qIg3I?t=650
 
 ### title.ru
-
+Apple не будет предустонавливать мессенджер Max
 
 ### statement.en
 The Max messenger has become "national," meaning it will have to be pre-installed on every smartphone and tablet sold in Russia. Since Apple has officially left Russia, it does not comply with any Russian legislation, which is why it won't pre-install anything.
@@ -26,7 +26,7 @@ The Max messenger has become "national," meaning it will have to be pre-installe
 1) Bakaleyko https://youtu.be/A6tqK4qIg3I?t=650
 
 ### title.en
-
+Apple will not pre-install the Max messenger
 
 ### original-language
 ru
