--- a/data/posts/4000/3104.md
+++ b/data/posts/4000/3104.md
@@ -14,7 +14,7 @@
 1) Бакалейко https://youtu.be/A6tqK4qIg3I?t=2000
 
 ### title.ru
-
+Доллар будет больше 80 рублей
 
 ### statement.en
 I think it's a very good option right now to stock up on bucks. You can also take out a small ruble loan from the bank and convert it to dollars. I don't think the dollar will be much less than 80 anymore; I'm sure it won't, but it will be more.
@@ -26,7 +26,7 @@ I think it's a very good option right now to stock up on bucks. You can also tak
 1) Bakaleyko https://youtu.be/A6tqK4qIg3I?t=2000
 
 ### title.en
-
+The dollar will be more than 80 rubles
 
 ### original-language
 ru
