--- a/data/posts/4000/3106.md
+++ b/data/posts/4000/3106.md
@@ -14,7 +14,7 @@
 1) ПОПОВА https://youtu.be/pqW3R4FTtZs?t=35
 
 ### title.ru
-
+Сейчас не будет встречи Трампа, Путина и Зеленского
 
 ### statement.en
 Right now it's difficult to imagine that this meeting would take place... A trilateral meeting, from my point of view, is absolutely unrealistic... it won't happen now.
@@ -26,7 +26,7 @@ In response to the question: "Will there be a three-way meeting after all with T
 1) POPOVA https://youtu.be/pqW3R4FTtZs?t=35
 
 ### title.en
-
+There will not be a meeting between Trump, Putin, and Zelensky now
 
 ### original-language
 ru
