--- a/data/posts/4000/3107.md
+++ b/data/posts/4000/3107.md
@@ -14,7 +14,7 @@
 1) https://youtu.be/jA37A3g5VZM?t=1329
 
 ### title.ru
-
+Россия ликвидирует кого-то из Европейских лидеров
 
 ### statement.en
 I think it will come to a victim anyway. The Russians will definitely do it. I don't know who exactly they will eliminate. I mean European leaders; I'm not joking. They will eliminate one of them.
@@ -26,7 +26,7 @@ I think it will come to a victim anyway. The Russians will definitely do it. I d
 1) https://youtu.be/jA37A3g5VZM?t=1329
 
 ### title.en
-
+Russia will liquidate one of the European leaders
 
 ### original-language
 ru
