--- a/data/posts/4000/3108.md
+++ b/data/posts/4000/3108.md
@@ -14,7 +14,7 @@
 1) https://youtu.be/9rDl9UUpNSQ?t=1127
 
 ### title.ru
-
+Трамп не будет воевать с Венесуэлой
 
 ### statement.en
 Look at Venezuela, it's been thrown into the mix. Nothing will happen... because to do that, one would have to enter into a real, prolonged conflict with an unpredictable outcome. And he's geared for perpetual victory, Trump is.
@@ -26,7 +26,7 @@ Look at Venezuela, it's been thrown into the mix. Nothing will happen... because
 1) https://youtu.be/9rDl9UUpNSQ?t=1127
 
 ### title.en
-
+Trump will not go to war with Venezuela
 
 ### original-language
 ru
