--- a/data/posts/4000/3110.md
+++ b/data/posts/4000/3110.md
@@ -14,7 +14,7 @@
 1) Ходорковский LIVE https://youtu.be/0KjTs38MHRQ?t=2502
 
 ### title.ru
-
+Будет всемирный процесс над правлением Владимира Путина
 
 ### statement.en
 I think that when there's a worldwide trial over the rule of Vladimir Putin and his accomplices, Beslan will be one of the main arguments. And have no doubt that this trial will happen.
@@ -26,7 +26,7 @@ I think that when there's a worldwide trial over the rule of Vladimir Putin and 
 1) Khodorkovsky LIVE https://youtu.be/0KjTs38MHRQ?t=2502
 
 ### title.en
-
+There will be a world trial against the rule of Vladimir Putin
 
 ### original-language
 ru
