--- a/data/posts/4000/3111.md
+++ b/data/posts/4000/3111.md
@@ -14,7 +14,7 @@
 1) Владислав Жуковский https://youtu.be/xZk0VJrudqU?t=535
 
 ### title.ru
-
+До конца 2025 года Трамп примет важные решения по войне в Украине
 
 ### statement.en
 I'm still inclined to believe that he will resolve this issue somehow by the end of the year. Either he'll arrange some kind of temporary truce, or he'll go all out. Something will happen by the end of the year. You promised it in a day, but a year is already just around the corner. 
@@ -26,7 +26,7 @@ Trump will make some important decisions regarding the war in Ukraine by the end
 1) Vladislav Zhukovsky https://youtu.be/xZk0VJrudqU?t=535
 
 ### title.en
-
+By the end of 2025, Trump will make important decisions on the war in Ukraine
 
 ### original-language
 ru
