--- a/data/posts/4000/3114.md
+++ b/data/posts/4000/3114.md
@@ -15,7 +15,7 @@
 1) Игорь Яковенко https://youtu.be/xXgoX22EsFY?t=1255
 
 ### title.ru
-
+Европейцы не введут войска в Украину, если Путин не даст своё согласие
 
 ### statement.en
 If Putin doesn't agree to this, the Europeans won't send any troops anywhere. That's because they aren't ready to go to war with Putin. 
@@ -27,7 +27,7 @@ If Putin doesn't give his consent, the Europeans won't send troops to Ukraine.
 1) Igor Yakovenko https://youtu.be/xXgoX22EsFY?t=1255
 
 ### title.en
-
+The Europeans will not send troops to Ukraine unless Putin gives his consent
 
 ### original-language
 ru
