--- a/data/posts/4000/3115.md
+++ b/data/posts/4000/3115.md
@@ -14,7 +14,7 @@
 1) Фёдор Крашенинников https://youtu.be/GsOL3HfeV94?t=1695
 
 ### title.ru
-
+Европейские страны не вступят в войну в Украине
 
 ### statement.en
 No matter what's happening in Europe or what statements are being made there, no one will fight. They just won't join this war; it's obvious. 
@@ -26,7 +26,7 @@ European countries will not enter the war in Ukraine.
 1) Fyodor Krasheninnikov  https://youtu.be/GsOL3HfeV94?t=1695
 
 ### title.en
-
+European countries will not enter the war in Ukraine
 
 ### original-language
 ru
