--- a/data/posts/4000/3118.md
+++ b/data/posts/4000/3118.md
@@ -14,7 +14,7 @@
 1) https://youtu.be/r8PRQISjGiI?t=476
 
 ### title.ru
-
+ШОС и БРИКС не заменят доллар
 
 ### statement.en
 This SCO, as well as BRICS and Russia's customs unions, are purely bureaucratic inventions that won't play a role. They will not replace the dollar.
@@ -26,7 +26,7 @@ This SCO, as well as BRICS and Russia's customs unions, are purely bureaucratic 
 1) https://youtu.be/r8PRQISjGiI?t=476
 
 ### title.en
-
+The SCO and BRICS will not replace the dollar
 
 ### original-language
 ru
