--- a/data/posts/4000/3119.md
+++ b/data/posts/4000/3119.md
@@ -14,7 +14,7 @@
 1) Котрикадзе Дзядко https://youtu.be/DQBrEg3vBRc?t=1290
 
 ### title.ru
-
+Дональд Трамп и Франческо Альбанезе не получат Нобелевскую премию мира 2025
 
 ### statement.en
 I think neither the first nor the second will get it. 
@@ -26,7 +26,7 @@ In response to the comment: "Right now, the main contenders for the Nobel Peace 
 1) Kotrikadze Dzyadko https://youtu.be/DQBrEg3vBRc?t=1290
 
 ### title.en
-
+Donald Trump and Francesca Albanese will not receive the 2025 Nobel Peace Prize
 
 ### original-language
 ru
