--- a/data/posts/4000/3121.md
+++ b/data/posts/4000/3121.md
@@ -14,7 +14,7 @@
 1) Borovoy Live https://youtu.be/X-bEMWe6AIE?t=395
 
 ### title.ru
-
+Встреча между Путиным и Зеленским, без Трампа - это нереально
 
 ### statement.en
 I believe a meeting between Putin and Zelensky is unrealistic; that's already obvious. But a three-way meeting, where Trump could get them to the negotiating table...
@@ -26,7 +26,7 @@ I believe a meeting between Putin and Zelensky is unrealistic; that's already ob
 1) Borovoy Live https://youtu.be/X-bEMWe6AIE?t=395
 
 ### title.en
-
+A meeting between Putin and Zelensky, without Trump, is unrealistic
 
 ### original-language
 ru
