--- a/data/posts/4000/3122.md
+++ b/data/posts/4000/3122.md
@@ -14,7 +14,7 @@
 1) Borovoy Live https://youtu.be/X-bEMWe6AIE?t=480
 
 ### title.ru
-
+Трамп остановит войну в Украине
 
 ### statement.en
 Trump, as a man of morality, stopped 7 wars, and he will stop this one too.
@@ -26,7 +26,7 @@ Trump, as a man of morality, stopped 7 wars, and he will stop this one too.
 1) Borovoy Live https://youtu.be/X-bEMWe6AIE?t=480
 
 ### title.en
-
+Trump will stop the war in Ukraine
 
 ### original-language
 ru
