--- a/data/posts/4000/3123.md
+++ b/data/posts/4000/3123.md
@@ -14,7 +14,7 @@
 1) Живой Гвоздь https://youtu.be/YfLn-ZDV1_I?t=1925
 
 ### title.ru
-
+Джей Ди Вэнс не будет президентом США 
 
 ### statement.en
 Vance, it's unlikely that anyone will bring him to power. No one needs him.
@@ -26,7 +26,7 @@ JD Vance
 1) Live Nail https://youtu.be/YfLn-ZDV1_I?t=1925
 
 ### title.en
-
+J.D. Vance will not be the President of the United States
 
 ### original-language
 ru
