--- a/data/posts/4000/3124.md
+++ b/data/posts/4000/3124.md
@@ -5,7 +5,7 @@
 21 <!-- mark-feygin, Марк Фейгин -->
 
 ### statement.ru
-Вы верите что Наренда Моди откажется о закупок Российской нефти? Нет, он не откажется, это Трамп пойдёт ему на встречу.
+Вы верите что Наренда Моди откажется от закупок Российской нефти? Нет, он не откажется, это Трамп пойдёт ему на встречу.
 
 ### context.ru
 
@@ -14,7 +14,7 @@
 1) Фейгин LIVE https://youtu.be/I3XUZIG0ySU?t=2340
 
 ### title.ru
-
+Индия не откажется от закупок Российской нефти 
 
 ### statement.en
 Do you believe that Narendra Modi will give up buying Russian oil? No, he won't. Trump will be the one to meet him halfway.
@@ -26,7 +26,7 @@ Do you believe that Narendra Modi will give up buying Russian oil? No, he won't.
 1) Feygin LIVE https://youtu.be/I3XUZIG0ySU?t=2340
 
 ### title.en
-
+India will not give up buying Russian oil
 
 ### original-language
 ru
