--- a/data/posts/4000/3125.md
+++ b/data/posts/4000/3125.md
@@ -14,7 +14,7 @@
 1) Котрикадзе Дзядко https://youtu.be/p865x995lEs?t=1420
 
 ### title.ru
-
+ЕС не введёт ограничения выдачи туристических виз Россиянам 
 
 ### statement.en
 Another round of sanctions is being discussed... The 19th sanctions package concerns a serious restriction on the issuance of tourist visas to Russians... I am absolutely convinced that such a measure won't be adopted.
@@ -26,7 +26,7 @@ Another round of sanctions is being discussed... The 19th sanctions package conc
 1) Kotrikadze Dzyadko https://youtu.be/p865x995lEs?t=1420
 
 ### title.en
-
+The EU will not impose restrictions on issuing tourist visas to Russians
 
 ### original-language
 ru
