--- a/data/posts/4000/3126.md
+++ b/data/posts/4000/3126.md
@@ -14,7 +14,7 @@
 1) Евгений Киселёв https://youtu.be/1DuGBKEc9Ho?t=1735
 
 ### title.ru
-
+Трамп будет продавать оружие Россиянам
 
 ### statement.en
 For now, we're being saved by Trump's greed, in that he's willing to sell these weapons to the Europeans, but then he'll sell weapons to the Russians. I think it'll all happen just like that.
@@ -26,7 +26,7 @@ For now, we're being saved by Trump's greed, in that he's willing to sell these 
 1) Yevgeny Kiselyov https://youtu.be/1DuGBKEc9Ho?t=1735
 
 ### title.en
-
+Donald Trump will sell weapons to Russians
 
 ### original-language
 ru
