--- a/data/posts/4000/3127.md
+++ b/data/posts/4000/3127.md
@@ -14,7 +14,7 @@
 1) https://youtu.be/Tauj6icWb_Y?t=511
 
 ### title.ru
-
+Китайцы долетят до Луны первыми
 
 ### statement.en
 China can afford any megaprojects... I'd cautiously predict that the Chinese will reach the moon first.
@@ -26,7 +26,7 @@ China can afford any megaprojects... I'd cautiously predict that the Chinese wil
 1) https://youtu.be/Tauj6icWb_Y?t=511
 
 ### title.en
-
+Chinese will be the first to fly to the Moon
 
 ### original-language
 ru
