--- a/data/posts/4000/3130.md
+++ b/data/posts/4000/3130.md
@@ -14,7 +14,7 @@
 1) Borovoy Live https://youtu.be/xCwjSmY2xx0?t=375
 
 ### title.ru
-
+Война в Украине не затянется на десятки лет
 
 ### statement.en
 Four years is a very long time for modern wars. I don't believe this will drag on for decades—at least not the hot phase. 
@@ -26,7 +26,7 @@ The war in Ukraine.
 1) Borovoy Live https://youtu.be/xCwjSmY2xx0?t=375
 
 ### title.en
-
+The war in Ukraine will not drag on for decades
 
 ### original-language
 ru
