--- a/data/posts/4000/3133.md
+++ b/data/posts/4000/3133.md
@@ -14,7 +14,7 @@
 1) Максим Шевченко https://youtu.be/xcBTL36oii0?t=4000
 
 ### title.ru
-
+Израиль не рискнёт напасть на Турцию
 
 ### statement.en
 No, Israel won't risk attacking Turkey, never. 
@@ -26,7 +26,7 @@ In response to the question: "Could you please tell me if Israel would risk atta
 1) Maksim Shevchenko https://youtu.be/xcBTL36oii0?t=4000
 
 ### title.en
-
+Israel will not dare to attack Turkey
 
 ### original-language
 ru
