--- a/data/posts/4000/3134.md
+++ b/data/posts/4000/3134.md
@@ -14,7 +14,7 @@
 1) Ходорковский LIVE https://youtu.be/tTqpaVbaG_U?t=512
 
 ### title.ru
-
+Ключевая ставка в России не будет 14% до конца 2025 года
 
 ### statement.en
 Is there a chance for 14%? In my opinion, there's no chance of that. There is a chance for 16% by the end of the year, but... 
@@ -26,7 +26,7 @@ Referring to the key rate in Russia, stating that it won't be 14% by the end of 
 1) Khodorkovsky LIVE https://youtu.be/tTqpaVbaG_U?t=512
 
 ### title.en
-
+The key rate in Russia will not be 14% until the end of 2025
 
 ### original-language
 ru
