--- a/data/posts/4000/3135.md
+++ b/data/posts/4000/3135.md
@@ -14,7 +14,7 @@
 1) Ходорковский LIVE https://youtu.be/tTqpaVbaG_U?t=1220
 
 ### title.ru
-
+В России повысят НДС
 
 ### statement.en
 In my opinion, they will raise it.
@@ -26,7 +26,7 @@ In response to the question: "What's your forecast? Will they raise the VAT, and
 1) Khodorkovsky LIVE https://youtu.be/tTqpaVbaG_U?t=1220
 
 ### title.en
-
+VAT will be increased in Russia
 
 ### original-language
 ru
