--- a/data/posts/4000/3138.md
+++ b/data/posts/4000/3138.md
@@ -14,7 +14,7 @@
 1) Фейгин LIVE https://youtu.be/19jSqIPvJi8?t=1084
 
 ### title.ru
-
+У Вэнса шансов нет сменить Трампа на посту президента Соединённых Штатов Америки
 
 ### statement.en
 I believe that Vance won't last, either. And Vance has no chance of replacing Trump as president of the United States.
@@ -26,7 +26,7 @@ I believe that Vance won't last, either. And Vance has no chance of replacing Tr
 1) Feygin LIVE https://youtu.be/19jSqIPvJi8?t=1084
 
 ### title.en
-
+Vance has no chance of replacing Trump as President of the United States of America
 
 ### original-language
 ru
