--- a/data/posts/4000/3139.md
+++ b/data/posts/4000/3139.md
@@ -14,7 +14,7 @@
 1) https://youtu.be/S1BrTy3KCH4?t=792
 
 ### title.ru
-
+Путинские дроны куда-то попадут на территории стран НАТО
 
 ### statement.en
 There will definitely be a next time from the Russian side. Putin needs for the drones not to just fly over Poland, but to hit something there, to blow something up on the territory of Poland or another NATO country.
@@ -26,7 +26,7 @@ There will definitely be a next time from the Russian side. Putin needs for the 
 1) https://youtu.be/S1BrTy3KCH4?t=792
 
 ### title.en
-
+Putin's drones will hit somewhere in NATO countries' territory
 
 ### original-language
 ru
