--- a/data/posts/4000/3140.md
+++ b/data/posts/4000/3140.md
@@ -14,7 +14,7 @@
 1) Популярная политика https://youtu.be/E7CE0YmBOcc?t=1320
 
 ### title.ru
-
+Замороженные в Бельгии активы России в итоге конфискуют
 
 ### statement.en
 Belgium is holding out, as that's where the majority of these assets are... I think that in the end they will be confiscated. 
@@ -26,7 +26,7 @@ The frozen Russian assets will eventually be confiscated.
 1) Popular Politics https://youtu.be/E7CE0YmBOcc?t=1320
 
 ### title.en
-
+Frozen Russian assets in Belgium will eventually be confiscated
 
 ### original-language
 ru
