--- a/data/posts/4000/3144.md
+++ b/data/posts/4000/3144.md
@@ -14,7 +14,7 @@
 1) https://youtu.be/SfI40QX7eIg?t=1643
 
 ### title.ru
-
+Украине отдадут замороженные на Западе Российские активы
 
 ### statement.en
 The Western countries have a very good scenario left to support Ukraine's financial stability: to give Ukraine Putin's money... I have no doubt that this is the exact scenario that will be implemented. That is to say, they will give the money to Ukraine. The Russian money.
@@ -26,7 +26,7 @@ It's about the frozen Russian assets.
 1) https://youtu.be/SfI40QX7eIg?t=1643
 
 ### title.en
-
+Ukraine will be given frozen Russian assets in the West
 
 ### original-language
 ru
