--- a/data/posts/4000/3147.md
+++ b/data/posts/4000/3147.md
@@ -14,7 +14,7 @@
 1) Котрикадзе Дзядко https://youtu.be/10r9JGdggXs?t=1728
 
 ### title.ru
-
+На Аллу Пугачёву не заведут уголовное дело
 
 ### statement.en
 Alla Pugacheva could face up to 5 years in prison for her remarks about Dzhokhar Dudayev... I don't think Alla Pugacheva will face a criminal case.
@@ -26,7 +26,7 @@ Alla Pugacheva could face up to 5 years in prison for her remarks about Dzhokhar
 1) Kotrikadze Dzyadko https://youtu.be/10r9JGdggXs?t=1728
 
 ### title.en
-
+No criminal case will be initiated against Alla Pugacheva
 
 ### original-language
 ru
