--- a/data/posts/4000/3148.md
+++ b/data/posts/4000/3148.md
@@ -14,7 +14,7 @@
 1) Фейгин LIVE https://youtu.be/oNPwfQMe90o?t=1828
 
 ### title.ru
-
+Трамп не введёт санкции против Китая
 
 ### statement.en
 Trump will definitely not impose anything against China. 
@@ -26,7 +26,7 @@ Sanctions.
 1) Feygin LIVE https://youtu.be/oNPwfQMe90o?t=1828
 
 ### title.en
-
+Trump will not impose sanctions against China
 
 ### original-language
 ru
