--- a/data/posts/4000/3151.md
+++ b/data/posts/4000/3151.md
@@ -14,7 +14,7 @@
 1) Максим Шевченко https://youtu.be/s5nWBZjc9Wc?t=2240
 
 ### title.ru
-
+Не дойдёт до того, что НАТО придется сбивать Российские истребители
 
 ### statement.en
 Yes, they would. But I don't think it will come to that.
@@ -26,7 +26,7 @@ In response to the question: "NATO is threatening to shoot down Russian fighter 
 1) Maksim Shevchenko https://youtu.be/s5nWBZjc9Wc?t=2240
 
 ### title.en
-
+It won't come to the point where NATO has to shoot down Russian fighter jets
 
 ### original-language
 ru
