--- a/data/posts/4000/3153.md
+++ b/data/posts/4000/3153.md
@@ -30,7 +30,7 @@
 1) https://t.me/yigal_levin/88019
 
 ### title.ru
-
+Если ИИ не притормозят, то вероятно, до конца 21 века будет серия больших смертоносных конфликтов
 
 ### statement.en
 Let me remind you that it is forbidden to kill people anywhere, in any state, even in diametrically opposed ones.
@@ -58,7 +58,7 @@ In them, troublemakers, the destitute, the displaced, the unemployed, those who 
 1) https://t.me/yigal_levin/88019
 
 ### title.en
-
+If AI isn't slowed down, there will likely be a series of large, deadly conflicts before the end of the 21st century
 
 ### original-language
 ru
