--- a/data/posts/4000/3154.md
+++ b/data/posts/4000/3154.md
@@ -14,7 +14,7 @@
 1) Популярная политика https://youtu.be/9voijjssakU?t=1490
 
 ### title.ru
-
+Россия будет провоцировать специально Европейские страны якобы случайными залётами дронов
 
 ### statement.en
 I am 100% sure that Russia will deliberately provoke European countries with these seemingly accidental incursions. It won't be every week, but once a month or once every two months, hypothetically. I doubt one will be shot down eventually; as long as it flies on a tangent—just cutting the corner—they won't shoot it down. If they fly deep inside, then that's a different matter. 
@@ -26,7 +26,7 @@ In response to the question: "How likely is it that Russia will also troll the E
 1) Popular Politics https://youtu.be/9voijjssakU?t=1490
 
 ### title.en
-
+Russia will deliberately provoke European countries with supposedly accidental drone overflights
 
 ### original-language
 ru
