--- a/data/posts/4000/3155.md
+++ b/data/posts/4000/3155.md
@@ -14,7 +14,7 @@
 1) Популярная политика https://youtu.be/O-qp55SVw3Y?t=2140
 
 ### title.ru
-
+В России на выборах 2006 от партии власти обязательно будет военный
 
 ### statement.en
 There will definitely be some military figure, someone who has an association with the SMO, and a positive one at that. 
@@ -26,7 +26,7 @@ In the 2026 elections in Russia, from the ruling party.
 1) Popular Politics https://youtu.be/O-qp55SVw3Y?t=2140
 
 ### title.en
-
+In the 2006 Russian elections, a military figure will necessarily be from the ruling party
 
 ### original-language
 ru
