--- a/data/posts/4000/3156.md
+++ b/data/posts/4000/3156.md
@@ -14,7 +14,7 @@
 1) Популярная политика https://youtu.be/O-qp55SVw3Y?t=2440
 
 ### title.ru
-
+Путин не пойдёт лидером от списка Единой России на выборах 2026
 
 ### statement.en
 What I'm sure of is, Putin won't go. The rating of United Russia is so disastrous that Putin cannot be associated with United Russia.
@@ -26,7 +26,7 @@ As the list leader for United Russia in the 2026 elections.
 1) Popular Politics https://youtu.be/O-qp55SVw3Y?t=2440
 
 ### title.en
-
+Putin will not be the leader of the United Russia party list in the 2026 elections
 
 ### original-language
 ru
