--- a/data/posts/4000/3158.md
+++ b/data/posts/4000/3158.md
@@ -14,7 +14,7 @@
 1) Популярная политика https://youtu.be/eM-VTBD5k_E?t=1815
 
 ### title.ru
-
+Никаких ветеранов СВО во власть не пустят в России
 
 ### statement.en
 Well, perhaps some very nominal figure, like Zhoga—meaning a 'desk veteran' who hasn't seen much fighting and clearly understands the party line. Naturally, no veterans of the Special Military Operation will be allowed into positions of power. The Kremlin would view them more as a dangerous, destructive force. 
@@ -26,7 +26,7 @@ In response to the question: "Will any SMO veteran be featured as one of the mai
 1) Popular Politics https://youtu.be/eM-VTBD5k_E?t=1815
 
 ### title.en
-
+No SVO veterans will be allowed into power in Russia
 
 ### original-language
 ru
