--- a/data/posts/4000/3160.md
+++ b/data/posts/4000/3160.md
@@ -14,7 +14,7 @@
 1) Живой Гвоздь https://youtu.be/hfX6VlxAA8c?t=3030
 
 ### title.ru
-
+Если Россия не выйдет на границы ДНР ЛНР то будут Томагавки и война будет продолжаться
 
 ### statement.en
 Russia cannot conclude a truce without reaching the borders of the DNR and LNR. But what if it fails to reach them? There will be a political crisis, I think. Then the war will continue, and then they will start supplying Tomahawks, I think.
@@ -26,7 +26,7 @@ Russia cannot conclude a truce without reaching the borders of the DNR and LNR. 
 1) Live Nail https://youtu.be/hfX6VlxAA8c?t=3030
 
 ### title.en
-
+If Russia does not reach the borders of the DPR and LPR, there will be Tomahawks and the war will continue
 
 ### original-language
 ru
