--- a/data/posts/4000/3088.md
+++ b/data/posts/4000/3088.md
@@ -14,7 +14,7 @@
 1) Сергей Смирнов https://youtu.be/--SSNDvFHT0?t=5745
 
 ### title.ru
-
+Кашеварову объявят иноагентом
 
 ### statement.en
 I'm betting on Kashevarova. It's time to declare her a foreign agent. 
@@ -26,7 +26,7 @@ In response to the question: "Who is next among the pro-government people, what'
 1) Sergey Smirnov  https://youtu.be/--SSNDvFHT0?t=5745
 
 ### title.en
-
+Kashevarova will be declared a foreign agent
 
 ### original-language
 ru
