--- a/data/posts/4000/3097.md
+++ b/data/posts/4000/3097.md
@@ -14,7 +14,7 @@
 1) https://youtu.be/Q9DhovVhJ2k?t=3117
 
 ### title.ru
-
+Трамп остановит войну в Украине
 
 ### statement.en
 One way or another, they will stop the war. He wants the Nobel Peace Prize. I think that, unfortunately, he will stop this war through a very unfair division of Ukraine, but people will stop dying, and he will be seen as a peacemaker. I think that's what will happen. It will be a very unfair, humiliating peace for Ukraine.
@@ -26,7 +26,7 @@ He = Trump
 1) https://youtu.be/Q9DhovVhJ2k?t=3117
 
 ### title.en
-
+Trump will stop the war in Ukraine
 
 ### original-language
 ru
